--- a/index.html
+++ b/index.html
@@ -101,8 +101,12 @@
                     <a href="#beneficios" class="text-gray-700">Beneficios</a>
                     <a href="#testimonios" class="text-gray-700">Testimonios</a>
                     <a href="#contacto" class="text-gray-700">Contacto</a>
+                    <!--
                     <a href="#contacto" class="bg-blue-700 text-white font-medium py-2 px-4 rounded-lg text-center">
                         Demo Gratis
+                    </a>-->
+                    <a href="https://app.multiservicios247.com" class="bg-blue-700 hover:bg-blue-800 text-white text-center font-medium py-2 px-6 rounded-lg transition duration-300">
+                        <i class="fas fa-rocket mr-2"></i> Acceder a la Aplicación
                     </a>
                 </div>
             </div>
